--- a/articles.html
+++ b/articles.html
@@ -16,11 +16,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <style type="text/css">
-    /*
+    
          .cnzz {
            display: none;
          }
-    */
+    
     </style>
 
     <link rel="stylesheet" type="text/css" href="/assets/css/footer.css" />
@@ -86,14 +86,13 @@
 
     {% include footer.html %}
 
-    <!--
+
     <div class="cnzz">
-      <script type="text/javascript">
-          var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-          document.write(unescape("%3Cspan id='cnzz_stat_icon_1260800361'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/z_stat.php%3Fid%3D1260800361%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));
+      <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+        document.write(unescape("%3Cspan id='cnzz_stat_icon_1264504251'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s13.cnzz.com/z_stat.php%3Fid%3D1264504251%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));
       </script>
     </div>
--->
+
 </body>
 <script type="text/javascript" src="/assets/js/articles.js"></script>
 <script type="text/javascript" src="/assets/js/background-animation.js"></script>
